--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,14 @@ services:
         - 7687:7687
       environment:
         - NEO4J_AUTH=neo4j/test
+        - NEO4J_ACCEPT_LICENSE_AGREEMENT=yes
+        - NEO4JLABS_PLUGINS=["graph-data-science", "apoc"]
+        - NEO4J_dbms_security_procedures_whitelist=gds.*, apoc.*
+        - NEO4J_dbms_security_procedures_unrestricted=gds.*, apoc.*
+        - apoc.import.file.enabled=true
       volumes:
         - neo4j_data:/data
+        - /home/shivang/ProductData:/var/lib/neo4j/import/
 
 volumes:
   neo4j_data:
